	PR tree-optimization/54717 	* tree-ssa-pre.c (do_partial_partial_insertion): Consider also edges 	with ANTIC_IN.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193553 138bc75d-0d04-0410-961f-82ee72b054a4